# bdi_tom

./: .gitignore  README.md  TODO.md  main.py  pyproject.toml  requirements.txt  test_c2d_bdi.py  test_dataset_quick.py  test_diagnostic.py  test_model_quick.py
agent_controller/: agent.py  agent_utils.py  planning_utils.py
archive/: data_loader.py  enhanced_map_encoder.py  enhanced_tom_graph_encoder.py  enhanced_trajectory_encoder.py  exp_2.py  exp_2_data.py  exp_2_eval.py.bak  temporal_feature_enricher.py  ucsd_node2vec.emb
checkpoints/: .gitkeep
experiments/: analyze_destination_distribution.py  analyze_model_prediction_diversity.py  exp_1.py  exp_2_data.py  exp_2_data_filtering.py  exp_2_eval.py  exp_2_plot.py  exp_2a_data_filtering.py  exp_2b_data_filtering.py  exp_3.py  exp_3_data.py  exp_3_eval.py  plot_exp1_comparison.py  train_ablation.py
graph_controller/: world_graph.py
graph_creation_controller/: add_clean_categories.py  add_opening_hours.py  download_ucsd_map.py  merge_poi_to_graph.py
models/: __init__.py  data_test.ipynb  transformer_predictor.py
notebooks/: agent_testing.ipynb  map_testing.ipynb  simulation_testing.ipynb
scripts/: download_ucsd_map.py  hyperparameter_search.py  hyperparameter_search.sh  test_node2vec.py  train_baseline_transformer_model.sh
simulation_analysis/: run_small_sim.py  simulation_dynamics.ipynb
simulation_controller/: belief_store.py  simulation.py  simulation_runner.py
testing/: run_simulation_tests.sh  run_tests.sh  test_accuracy_metrics.py  test_belief_updates.py  test_goal_reached.py  test_simulation.py  (+2 more)
(+106 files in other folders)
