[project]
name = "bdi-tom"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "black>=25.9.0",
    "geopandas>=1.1.1",
    "ipython>=9.6.0",
    "jupyterlab>=4.4.9",
    "lightning>=2.5.5",
    "matplotlib>=3.10.6",
    "networkx>=3.5",
    "notebook>=7.4.7",
    "numpy>=2.3.3",
    "osmnx>=2.0.6",
    "pandas>=2.3.3",
    "pre-commit>=4.3.0",
    "rich>=14.1.0",
    "scikit-learn>=1.7.2",
    "scipy>=1.16.2",
    "shapely>=2.1.2",
    "torch>=2.8.0",
    "torchvision>=0.23.0",
    "tqdm>=4.67.1",
    "wandb>=0.22.1",
]
